--- a/package.json
+++ b/package.json
@@ -2,34 +2,48 @@
   "name": "bucksy",
   "version": "0.0.1",
   "description": "a discord utility/game bot",
-  "main": "index.js",
+  "main": "dist/index.js",
   "dependencies": {
-    "axios": "^0.21.1",
-    "bad-words": "^3.0.4",
-    "canvas": "^2.7.0",
-    "cron": "^1.8.2",
-    "discord.js": "^12.4.1",
-    "dotenv": "^8.2.0",
-    "jimp": "^0.16.1",
-    "mongodb": "^3.6.3",
+    "axios": "^1.8.2",
+    "bad-words": "^4.0.0",
+    "canvas": "^3.1.0",
+    "cron": "^4.1.0",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
+    "jimp": "^0.22.10",
+    "mongodb": "^6.14.2",
     "potrace": "^2.1.8",
-    "puppeteer": "^5.5.0",
-    "sharp": "^0.27.2",
-    "tesseract.js": "^2.1.4"
+    "puppeteer": "^22.4.0",
+    "sharp": "^0.33.5",
+    "tesseract.js": "^5.0.5"
   },
   "devDependencies": {
-    "@google-cloud/dialogflow": "^4.1.4",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "2.2.1",
-    "uuid": "^8.3.2"
+    "@google-cloud/dialogflow": "^6.4.0",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/mongodb": "^4.0.6",
+    "@types/node": "^22.13.10",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "prettier": "3.2.5",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "uuid": "^9.0.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "monitor": "nodemon index.js",
-    "daemon": "pm2 start index.js",
-    "prettify": "yarn prettier --write .",
-    "test": "jest"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "monitor": "nodemon dist/index.js",
+    "daemon": "pm2 start dist/index.js",
+    "prettify": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "start:old": "node old/index.js"
   },
   "author": "",
   "license": "ISC"
