--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "dependencies": {
     "axios": "^1.8.2",
     "bad-words": "^4.0.0",
+    "bcrypt": "^5.1.1",
     "canvas": "^3.1.0",
     "cron": "^4.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "fs-extra": "^11.3.0",
     "jimp": "^0.22.10",
     "mongodb": "^6.14.2",
     "potrace": "^2.1.8",
@@ -19,13 +24,17 @@
   },
   "devDependencies": {
     "@google-cloud/dialogflow": "^6.4.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.17.10",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^22.13.10",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "prettier": "3.2.5",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
@@ -35,7 +44,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "dev:admin": "nodemon --watch 'src/admin/**/*.ts' --exec 'ts-node' src/admin/devServer.ts",
+    "build": "tsc && ts-node src/scripts/build-admin.ts",
+    "build:admin": "ts-node src/scripts/build-admin.ts",
     "watch": "tsc -w",
     "monitor": "nodemon dist/index.js",
     "daemon": "pm2 start dist/index.js",
@@ -50,9 +61,15 @@
     "pm2:stop": "pm2 stop bucksy",
     "pm2:restart": "pm2 restart bucksy",
     "pm2:reload": "pm2 reload bucksy",
-    "pm2:status": "pm2 status bucksy",
-    "pm2:logs": "pm2 logs bucksy",
+    "pm2:status": "pm2 status",
+    "pm2:logs": "pm2 logs",
     "pm2:dev": "pm2 start ecosystem.config.js --env development",
+    "pm2:admin:start": "pm2 start bucksy-admin",
+    "pm2:admin:stop": "pm2 stop bucksy-admin",
+    "pm2:admin:restart": "pm2 restart bucksy-admin",
+    "pm2:admin:logs": "pm2 logs bucksy-admin",
+    "pm2:start:all": "pm2 start ecosystem.config.js",
+    "pm2:stop:all": "pm2 stop all",
     "deploy": "./deploy.sh"
   },
   "author": "",
