update readme and pm2 conf

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bad-words": "^4.0.0",
     "bcrypt": "^5.1.1",
     "canvas": "^3.1.0",
+    "connect-mongo": "^5.1.0",
     "cron": "^4.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
@@ -64,13 +65,18 @@
     "pm2:status": "pm2 status",
     "pm2:logs": "pm2 logs",
     "pm2:dev": "pm2 start ecosystem.config.js --env development",
-    "pm2:admin:start": "pm2 start bucksy-admin",
+    "pm2:admin:start": "NODE_ENV=production pm2 start bucksy-admin",
     "pm2:admin:stop": "pm2 stop bucksy-admin",
     "pm2:admin:restart": "pm2 restart bucksy-admin",
     "pm2:admin:logs": "pm2 logs bucksy-admin",
-    "pm2:start:all": "pm2 start ecosystem.config.js",
+    "pm2:start:all": "NODE_ENV=production pm2 start ecosystem.config.js",
     "pm2:stop:all": "pm2 stop all",
-    "deploy": "./deploy.sh"
+    "check-env": "node src/scripts/check-env.js",
+    "deploy": "./deploy.sh",
+    "create:admin": "ts-node src/scripts/create-admin-user.ts",
+    "create:admin:js": "node scripts/create-admin.js",
+    "check:sessions": "node scripts/check-session-config.js",
+    "remove:unique-indexes": "ts-node src/scripts/remove-unique-indexes.ts"
   },
   "author": "",
   "license": "ISC"
